Fix overlap of logo and spec title/subtitle

--- a/standard.css
+++ b/standard.css
@@ -208,11 +208,12 @@ td.non-rectangular-cell-indentation { border-top-style: hidden; min-width: 2em; 
 
 .head { margin: 0 0 1em; padding: 1em 0 0 0; display: block; }
 .head p { margin: 0; }
-.head h1 { margin: 0; }
-.head h2 { margin-top: 0; }
+.head h1 { margin: 0 100px 0 0; }
+.head h2 { margin-top: 0; margin-right: 100px; }
 .head .logo img { position: absolute; top: 1em; right: 1em; border: none } /* remove border from top image */
 @media (max-width: 767px) {
   .head .logo img { width: 4em; height: 4em; }
+  .head h1, .head h2 { margin-right:5rem; }
 }
 .head dl { margin: 1em 0; }
 p.copyright { font-size: 0.6em; font-style: oblique; margin: 0; }
